<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sharangirdhani.inclass10.SignupActivity">

    <EditText
        android:id="@+id/editSignupFirstName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editSignupLastName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:layout_below="@+id/editSignupFirstName"
        android:layout_alignStart="@+id/editSignupFirstName" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSignup"
        android:text="@string/buttonSignupLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editSignupPassword"
        android:layout_marginBottom="29dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editSignupPassword"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_marginTop="58dp"
        android:layout_alignTop="@+id/editSignupEmail"
        android:layout_alignStart="@+id/editSignupEmail"
        android:layout_alignEnd="@+id/editSignupEmail" />

    <EditText
        android:id="@+id/editSignupConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editSignupPassword"
        android:layout_alignStart="@+id/editSignupPassword"
        android:layout_below="@+id/editSignupPassword"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editSignupEmail"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/editSignupLastName"
        android:layout_alignStart="@+id/editSignupLastName"
        android:layout_alignEnd="@+id/editSignupLastName" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_alignEnd="@+id/editSignupPassword" />
</RelativeLayout>
